--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.4",
+    "firebase": "^10.5.2",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
