--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
