--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.4",
+    "axios": "^1.6.2",
     "firebase": "^10.5.2",
     "next": "14.0.1",
     "react": "^18",
