--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.19.0",
+    "react-svg-pan-zoom": "^3.12.1",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
