--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-router-dom": "^6.19.0",
     "react-svg-pan-zoom": "^3.12.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
